Cloud_Setup/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smartsense-gaia-x-api
  annotations:
    app: backend
    configmap.reloader.stakater.com/reload: "smartsense-gaia-x-api"
    secret.reloader.stakater.com/reload: "smartsense-gaia-x-api"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: smartsense-gaia-x-api
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      name: smartsense-gaia-x-api
      labels:
        app: smartsense-gaia-x-api
    spec:
      containers:
        - name: smartsense-gaia-x-api
          image: smartsense-gaia-x-api
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 60
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 60

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smartsense-gaia-x-signer
  annotations:
    app: backend
    configmap.reloader.stakater.com/reload: "smartsense-gaia-x-signer"
    secret.reloader.stakater.com/reload: "smartsense-gaia-x-signer"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: smartsense-gaia-x-signer
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      name: smartsense-gaia-x-signer
      labels:
        app: smartsense-gaia-x-signer
    spec:
      containers:
        - name: smartsense-gaia-x-signer
          image: smartsense-gaia-x-signer
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim-1

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smartsense-gaia-x-ui
  annotations:
    app: backend
    configmap.reloader.stakater.com/reload: "smartsense-gaia-x-ui"
    secret.reloader.stakater.com/reload: "smartsense-gaia-x-ui"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: smartsense-gaia-x-ui
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      name: smartsense-gaia-x-ui
      labels:
        app: smartsense-gaia-x-ui
    spec:
      containers:
        - name: smartsense-gaia-x-ui
          image: smartsense-gaia-x-ui
          imagePullPolicy: IfNotPresent
