Cloud_Setup/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: smartsense-gaia-x-api
spec:
  selector:
    app: smartsense-gaia-x-api
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 30016

---
apiVersion: v1
kind: Service
metadata:
  name: postgres # Sets service name
  labels:
    app: postgres # Labels and Selectors
spec:
  type: NodePort # Sets service type
  ports:
    - port: 5432
  selector:
    app: postgres

---
kind: Service
apiVersion: v1
metadata:
  name: smartsense-gaia-x-signer
spec:
  selector:
    app: smartsense-gaia-x-signer
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 30017

---
kind: Service
apiVersion: v1
metadata:
  name: smartsense-gaia-x-ui
spec:
  selector:
    app: smartsense-gaia-x-ui
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30018
